--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <div class="hero--content">
             <div class="hero--content--intro">
                 <div>
-                    <img id="profile_pic" src="static/images/arrow_up.png" alt="Not available">
-                    <!-- <div class="sign"><a class="signature">Keval Prajapati</a></div> -->
+                    <img id="profile_pic" src="static/images/My_image.png" alt="Not available">
                 </div>
                 <div class="intro">
                     <div class="intro--line">
@@ -120,7 +119,7 @@
             </div>
             
                 <div class="skill--wrapper">
-                    <img src="static/images/skill_code.png" class="skill--logo">
+                    <img src="static/images/Skill_image.png" class="skill--logo">
                     <div style="width:100%;">
                         <div class= "skill_edit">
                             <h5 class="skill--title">Python</h5>
@@ -132,7 +131,7 @@
                 </div>
 
                 <div class="skill--wrapper">
-                    <img src="static/images/skill_code.png" class="skill--logo">
+                    <img src="static/images/Skill_image.png" class="skill--logo">
                     <div style="width:100%;">
                         <div class= "skill_edit">
                             <h5 class="skill--title">Django</h5>
@@ -144,7 +143,7 @@
                 </div>
 
                 <div class="skill--wrapper">
-                    <img src="static/images/skill_code.png" class="skill--logo">
+                    <img src="static/images/Skill_image.png" class="skill--logo">
                     <div style="width:100%;">
                         <div class= "skill_edit">
                             <h5 class="skill--title">C</h5>
@@ -155,7 +154,7 @@
                     </div>
                 </div>
                 <div class="skill--wrapper">
-                    <img src="static/images/skill_code.png" class="skill--logo">
+                    <img src="static/images/Skill_image.png" class="skill--logo">
                     <div style="width:100%;">
                         <div class= "skill_edit">
                             <h5 class="skill--title">C++</h5>
@@ -166,7 +165,7 @@
                     </div>
                 </div>
                 <div class="skill--wrapper">
-                    <img src="static/images/skill_code.png" class="skill--logo">
+                    <img src="static/images/Skill_image.png" class="skill--logo">
                     <div style="width:100%;">
                         <div class= "skill_edit">
                             <h5 class="skill--title">Java</h5>
