--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="inner--project--wrapper--body">
                             <div>
                                 <div class="project--body">
-                                        <h3 class="heading--text">News App</h3>
+                                        <h3 class="heading--text">News WebApp</h3>
                                 </div>
                                 <div class="project--body">
                                     <div class="card--title--text"> 
@@ -85,7 +85,7 @@
                                 </div>
                             </div>
                             <div class="project--body--view--button">
-                                <a href="https://github.com/prajapatikeval/react_news_app" target="_blank" class="view--detail--button">View Detail <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                                <a href="https://github.com/prajapatikeval/react_news_app" target="_blank" class="view--detail--button">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                             </div>    
                         </div>
                     </div>
