--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keval portfolio</title>
+    <title>Keval Portfolio</title>
     <link rel="icon" href="static/images/Skill_image.png" type="image/icon type">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -200,17 +200,7 @@
                 </div>
                 <div class="skill--tag">
                     <div>
-                        <span class="skill--tag--title">SQL</span>
-                    </div>
-                </div>
-                <div class="skill--tag">
-                    <div>
-                        <span class="skill--tag--title">MongoDB</span>
-                    </div>
-                </div>
-                <div class="skill--tag">
-                    <div>
-                        <span class="skill--tag--title">PostgreSQL</span>
+                        <span class="skill--tag--title">Bootstrap</span>
                     </div>
                 </div>
                 <div class="skill--tag">
@@ -220,7 +210,17 @@
                 </div>
                 <div class="skill--tag">
                     <div>
-                        <span class="skill--tag--title">Bootstrap</span>
+                        <span class="skill--tag--title">MongoDB</span>
+                    </div>
+                </div>
+                <div class="skill--tag">
+                    <div>
+                        <span class="skill--tag--title">SQL</span>
+                    </div>
+                </div>
+                <div class="skill--tag">
+                    <div>
+                        <span class="skill--tag--title">PostgreSQL</span>
                     </div>
                 </div>
         </div>
