--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <img class="project--thumbnail" src="static/images/News_app.PNG" alt="Not available">
                         </div>
                         <div class="inner--project--wrapper--body">
-                            <div>
+                            <div class="project--main--text">
                                 <div class="project--body">
                                         <h3 class="heading--text">News WebApp</h3>
                                 </div>
@@ -102,7 +102,7 @@
     
     <section class="about-section">
         <div class="about--wrapper">
-                <div class="project--slogan">
+                <div>
                     <div>
                         <h3 class="title">More About Me</h3>
                     </div>
