--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="./assets/images/News_app.png" alt="arrival" loading="lazy">
+                  <img src="./assets/images/news_app.jpg" alt="arrival" loading="lazy">
                 </figure>
                 <h3 class="project-title">React News App</h3>
                 <p class="project-category">Web development</p>
